--- a/index.html
+++ b/index.html
@@ -139,10 +139,10 @@
 </header>
 <main class="main"><div class="profile">
     <div class="profile_inner">
-        <img draggable="false" src="https://tarangranpara.github.io/images/Tarang.jpeg" alt="Tarang Ranpara" title="Tarang Ranpara"
+        <img draggable="false" src="https://tarangranpara.github.io/images/Tarang_4.jpeg" alt="Tarang Ranpara" title="Tarang Ranpara"
             height="200" width="200" />
         <h1>Tarang Ranpara</h1>
-        <span>[Son, Brother, fiancé] | Software Engineer</span><div class="social-icons" >
+        <span>Human, Son, Brother | Software Engineer</span><div class="social-icons" >
     <a href="https://in.linkedin.com/in/tarangranpara" target="_blank" rel="noopener noreferrer me"
         title="Linkedin">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"
