--- a/index.html
+++ b/index.html
@@ -164,12 +164,12 @@
 </div>
 
         <div class="buttons">
-            <a class="button" href="/About/me" rel="noopener" title="About Me">
+            <a class="button" href="/Posts/me" rel="noopener" title="About Me">
                 <span class="button-inner">
                     About Me
                 </span>
             </a>
-            <a class="button" href="/About/site" rel="noopener" title="About This Site">
+            <a class="button" href="/Posts/site" rel="noopener" title="About This Site">
                 <span class="button-inner">
                     About This Site
                 </span>
